Name:                hibc
Version:             0.1
Description:         Identity Based Cryptography for Haskell
License:             GPL          
Author:              Simon Pfreundschuh
Maintainer:          spf@informatik.uni-kiel.de
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable hibc
  Main-is:           hibc.lhs
  Build-Depends:     base >= 3 && < 5, haskell98, bytestring, ghc-binary
